# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Order\CancelOrderController;
 use App\Http\Controllers\Order\CreateOrderController;
+use App\Http\Controllers\Order\ListOrdersController;
 use App\Http\Controllers\User\ProfileController;
 use Illuminate\Support\Facades\Route;
 
@@ -12,6 +13,8 @@ Route::prefix('auth')->group(function () {
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/profile', ProfileController::class)->name('user.profile');
+
+    Route::get('/orders', ListOrdersController::class)->name('orders.list');
     Route::post('/orders', CreateOrderController::class)->name('orders.create');
-    Route::post('/orders/{id}', CancelOrderController::class)->name('orders.cancel');
+    Route::post('/orders/{id}/cancel', CancelOrderController::class)->name('orders.cancel');
 });
